# MuchCool-Solution

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Libraries/: CMakeLists.txt
