cmake_minimum_required(VERSION 3.22)

project(MuchCool-Solution)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_C_STANDARD 17)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/Out/${CMAKE_BUILD_TYPE}/Bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/Out/${CMAKE_BUILD_TYPE}/Bin)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/Out/${CMAKE_BUILD_TYPE}/Lib)

add_subdirectory(Libraries)